--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "HTML Progressive Web App",
   "short_name": "HTML PWA",
-  "description": "A very cool web app powered by zUIx.js",
+  "description": "Made by eFyada",
   "theme_color": "#f5f8fa",
   "background_color": "white",
   "display": "standalone",
